# dags-test

./: .gitignore  CODEOWNERS  Dockerfile  Jenkinsfile  README.md  airflow.cfg  conftest.py  docker-compose.yml  entrypoint.sh  requirements.txt  setup.cfg  setup.py  test.sh
dag/settings/: timbrazil.py
dag/tasks/: ingest.py
dag/tasks/timbrazil/: anonymization.py
dag/utils/: anonymize.py  common.py
dag/utils/aws/: s3.py
dags/sa/tim/: myfirstdag.py
dags/sa/tim_brazil/: ingest_voice_data.py
dags/sa/timbrazil/: anonymize_sms.py  anonymize_voice.py  ingest_voice_data.py
docker/airflow/: Dockerfile
docker/airflow/requirements/: dev.txt  prod.txt  test.txt
docker/operators/default/: requirements.txt
k8s/: legacy.dockerfile
plugins/: ingestion.py  myfirstplugin.py
requirements/: dev.txt  prod.txt  test.txt
settings/: tim_brazil.py
tests/: test_dags.py  test_plugins.py  test_something.py  test_tasks.py  test_utils.py  test_validation.py
tests/fixtures/: bootstrap.sh
tests/fixtures/s3/bucket/prefix/: key.csv
tests/fixtures/s3/bucket/prefix/2020/04/01/00/: anonymization.csv
tests/fixtures/s3/timbrazil-internal/: ocs_mtc_01_20200401_0001.csv
utils/aws/: s3.py
