[metadata]
description-file = README.md

[aliases]
test = pytest
lint = flake8

[flake8]
extend-ignore = Q000,Q001,D200,D413,D104,D105
max-line-length = 119
max-complexity = 10
exclude = *tests/*, .git, __pycache__

[mypy]
ignore_missing_imports=true
disallow_untyped_calls=true
disallow_untyped_defs=true  # maybe disable this line for data scientist
disallow_incomplete_defs=true
check_untyped_defs=true
disallow_untyped_decorators=true
no_strict_optional=true

[tool:pytest]
testpaths = tests
xfail_strict = true
