[metadata]
description-file = README.md

[aliases]
test = pytest
lint = flake8

[flake8]
extend-ignore = Q000,Q001,D200,D413,D104,D105
max-line-length = 119
max-complexity = 10
exclude = *tests/*, .git, __pycache__

[mypy]
allow_redefinition=true
# enable below once move to airflow 1.10.11
# plugins = airflow.mypy.plugin.decorators
ignore_missing_imports=true
no_strict_optional=true
## enable below two for strict type checking
disallow_untyped_defs=true
disallow_incomplete_defs=true
## enable below three for loose type checking
# disallow_untyped_calls=true
# check_untyped_defs=true

[tool:pytest]
testpaths = tests
xfail_strict = true
addopts = -p no:warnings

[coverage:run]
source=.
omit=*tests*,conftest.py

[coverage:report]
show_missing=true
skip_covered=true
